# python-project-template-test

./: .gitignore  Makefile  Readme.md  pyproject.toml
src/: main.py
